# TestTask

./: .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  conftest.py  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/api/v1/: __init__.py  calculations.py
app/config/: __init__.py  settings.py
app/dependencies/: db.py
app/domain/: calculation.py  db.py  schema.py
migration/: env.py
migration/versions/: 2022_08_16_15_03-_initial_migration.py  2022_08_16_15_03_initial_migration.py  2022_08_16_15_40_add_operation_option.py
pg_init/: create_test_db.sh
tests/fixtures/: __init__.py  db.py
tests/integration/: test_endpoints.py
tests/unit/: test_calculation_flow.py  test_db.py  test_functors.py
